# coroutines-workshop-cpponsea2022

./: .gitignore  CMakeLists.txt  EXERCISES.md  README.md
source/: CMakeLists.txt  exercise01.cpp  exercise01_coroutine_traits.cpp  exercise01_generalized.cpp  exercise01_solution.cpp  exercise01_solution_generalized.cpp  exercise02.cpp  exercise02_solution.cpp  exercise03.cpp  exercise03_solution.cpp  exercise04.cpp  exercise04_solution.cpp  exercise05.cpp  exercise05_solution.cpp  exercise06.cpp  exercise06_solution.cpp  exercise07.cpp  exercise07_solution.cpp  exercise08.cpp  exercise08_solution.cpp  exercise09.cpp  exercise09_solution.cpp  exercise10.cpp  exercise10_solution.cpp  exercise11.cpp  exercise11_solution.cpp  exercise12.cpp  exercise12_solution.cpp
tools/: clang-format-all
