add_executable(exercise01 exercise01.cpp)
target_link_libraries(
  exercise01
  PRIVATE
  project_options
  project_warnings)

#add_executable(exercise02 exercise02.cpp)
#target_link_libraries(
#  exercise02
#  PRIVATE
#  project_options
#  project_warnings)

#add_executable(exercise03 exercise03.cpp)
#target_link_libraries(
#  exercise03
#  PRIVATE
#  project_options
#  project_warnings)

#add_executable(exercise04 exercise04.cpp)
#target_link_libraries(
#  exercise04
#  PRIVATE
#  project_options
#  project_warnings)

#add_executable(exercise05 exercise05.cpp)
#target_link_libraries(
#  exercise05
#  PRIVATE
#  project_options
#  project_warnings)

#add_executable(exercise06 exercise06.cpp)
#target_link_libraries(
#  exercise06
#  PRIVATE
#  project_options
#  project_warnings)

#add_executable(exercise07 exercise07.cpp)
#target_link_libraries(
#  exercise07
#  PRIVATE
#  project_options
#  project_warnings)

#add_executable(exercise08 exercise08.cpp)
#target_link_libraries(
#  exercise08
#  PRIVATE
#  project_options
#  project_warnings)

#add_executable(exercise09 exercise09.cpp)
#target_link_libraries(
#  exercise09
#  PRIVATE
#  project_options
#  project_warnings)

#add_executable(exercise10 exercise10.cpp)
#target_link_libraries(
#  exercise10
#  PRIVATE
#  project_options
#  project_warnings)

#add_executable(exercise11 exercise11.cpp)
#target_link_libraries(
#  exercise11
#  PRIVATE
#  project_options
#  project_warnings)

#add_executable(exercise12 exercise12.cpp)
#target_link_libraries(
#  exercise12
#  PRIVATE
#  project_options
#  project_warnings)
