add_executable(exercise01 exercise01_solution.cpp)
target_link_libraries(
  exercise01
  PRIVATE
  project_options
  project_warnings)

add_executable(exercise01_generalized exercise01_solution_generalized.cpp)
target_link_libraries(
  exercise01_generalized
  PRIVATE
  project_options
  project_warnings)

add_executable(exercise02 exercise02_solution.cpp)
target_link_libraries(
  exercise02
  PRIVATE
  project_options
  project_warnings)

add_executable(exercise03 exercise03_solution.cpp)
target_link_libraries(
  exercise03
  PRIVATE
  project_options
  project_warnings)

add_executable(exercise04 exercise04_solution.cpp)
target_link_libraries(
  exercise04
  PRIVATE
  project_options
  project_warnings)

add_executable(exercise05 exercise05_solution.cpp)
target_link_libraries(
  exercise05
  PRIVATE
  project_options
  project_warnings)

add_executable(exercise06 exercise06_solution.cpp)
target_link_libraries(
  exercise06
  PRIVATE
  project_options
  project_warnings)

add_executable(exercise07 exercise07_solution.cpp)
target_link_libraries(
  exercise07
  PRIVATE
  project_options
  project_warnings)

add_executable(exercise08 exercise08_solution.cpp)
target_link_libraries(
  exercise08
  PRIVATE
  project_options
  project_warnings)

add_executable(exercise09 exercise09_solution.cpp)
target_link_libraries(
  exercise09
  PRIVATE
  project_options
  project_warnings)

#add_executable(exercise10 exercise10_solution.cpp)
#target_link_libraries(
#  exercise10
#  PRIVATE
#  project_options
#  project_warnings)

#add_executable(exercise11 exercise11_solution.cpp)
#target_link_libraries(
#  exercise11
#  PRIVATE
#  project_options
#  project_warnings)

#add_executable(exercise12 exercise12_solution.cpp)
#target_link_libraries(
#  exercise12
#  PRIVATE
#  project_options
#  project_warnings)
